# llm-cost-comparison

./: .gitignore  README.md  pyproject.toml
llm_cost_calculator/: LLM Costs (September 2025).ods  LLM Costs (September 2025).xlsx  README.md  __init__.py  cost_calculator.py  data_loader.py  main.py  pages.py  throughput_estimator.py  utils.py  vram_calculator.py
llm_cost_calculator/common/: __init__.py  data_loader.py  utils.py  vram_calculator.py
llm_cost_calculator/pages/: __init__.py
llm_cost_calculator/pages/always_on_hosting/: __init__.py  page.py
llm_cost_calculator/pages/per_request_pricing/: __init__.py  cost_calculator.py  data_utils.py  page.py
